generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

enum Permission {
    READ
    WRITE
}

model User {
    id         String    @id @default(uuid())
    password   String
    email      String    @unique
    name       String    @unique
    created_at DateTime  @default(now())
    deleted_at DateTime?
    updated_at DateTime?

    own_documents    Document[]
    own_tags         Tag[]
    shared_documents Shared_document[]
    document_tags    User_Document_Tag[]
}

model Document {
    id         String    @id @default(uuid())
    title      String
    owner      User      @relation(fields: [owner_id], references: [id])
    owner_id   String
    automergeUrl String?
    created_at DateTime  @default(now())
    deleted_at DateTime?
    updated_at DateTime?

    users Shared_document[]
    tags  User_Document_Tag[]
}

model Tag {
    id         String              @id @default(uuid())
    name       String
    color      String
    owner      User                @relation(fields: [owner_id], references: [id])
    owner_id   String
    documents  User_Document_Tag[]
    deleted_at DateTime?
}

model Shared_document {
    id          String     @id @default(uuid())
    user        User       @relation(fields: [user_id], references: [id])
    user_id     String
    document    Document   @relation(fields: [document_id], references: [id])
    document_id String
    permissions Permission

    @@unique([user_id, document_id])
}

model User_Document_Tag {
    id          String   @id @default(uuid())
    user        User     @relation(fields: [user_id], references: [id])
    user_id     String
    document    Document @relation(fields: [document_id], references: [id])
    document_id String
    tag         Tag      @relation(fields: [tag_id], references: [id])
    tag_id      String

    @@unique([user_id, document_id, tag_id])
}
